[tool.poetry]
name = "ml-university"
version = "0.1.0"
description = ""
authors = ["Anton <Kondrahin210@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_university"}]

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^6.5.1"
umap-learn = "^0.5.3"
matplotlib = "^3.5.1"
sklearn = "^0.0"
seaborn = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
